--- a/overview.html
+++ b/overview.html
@@ -51,7 +51,7 @@
 <a name="more-detailed-features-are-available-in-each-page" class="anchor" href="#more-detailed-features-are-available-in-each-page"><span class="octicon octicon-link"></span></a>More detailed features are available in each page.</h3>
 
 <ul>
-<li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/WelcomeRIGHT">Welcome</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/overview">Welcome</a></li>
 <li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/HelloRIGHT">Hello RIGHT</a></li>
 <li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/TypesOfPlots">Supported Plot Types</a></li>
 <li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/AdvancedRIGHT">Advanced RIGHT</a></li>
