--- a/overview.html
+++ b/overview.html
@@ -58,7 +58,7 @@
 <li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/TypesOfInteractivity">Supported Interactivity</a></li>
 <li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/RIGHTForShiny">Server Offloading in Shiny</a></li>
 <li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/PlotOptions">Supported Plotting Options</a></li>
-<li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/MoreFeatures">More Features</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/welcome">More Features</a></li>
 </ul>
         </section>
 
