--- a/overview.html
+++ b/overview.html
@@ -52,13 +52,13 @@
 
 <ul>
 <li><a href="http://bethetaedu.github.io/tutorial/welcome">Welcome</a></li>
-<li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/HelloRIGHT">Hello RIGHT</a></li>
-<li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/TypesOfPlots">Supported Plot Types</a></li>
-<li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/AdvancedRIGHT">Advanced RIGHT</a></li>
-<li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/TypesOfInteractivity">Supported Interactivity</a></li>
-<li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/RIGHTForShiny">Server Offloading in Shiny</a></li>
-<li><a href="https://code.google.com/p/r-interactive-graphics-via-html/wiki/PlotOptions">Supported Plotting Options</a></li>
-<li><a href="http://bethetaedu.github.io/tutorial/welcome">More Features</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/helloright">Hello RIGHT</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/plottypes">Supported Plot Types</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/advancedright">Advanced RIGHT</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/interactivity">Supported Interactivity</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/serveroffloading">Server Offloading in Shiny</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/options">Supported Plotting Options</a></li>
+<li><a href="http://bethetaedu.github.io/tutorial/morefeatures">More Features</a></li>
 </ul>
         </section>
 
