--- a/helloright.html
+++ b/helloright.html
@@ -41,7 +41,7 @@
 </code></pre>
 
 <p>And it will show like below graph.
-<img src="http://thepotter.woobi.co.kr/img/scatter_R.PNG" alt=""><img src="http://thepotter.woobi.co.kr/img/scatter_R.PNG" alt=""></p>
+<img src="http://thepotter.woobi.co.kr/img/scatter_R.PNG" alt="">
 
 <p>Now, what you need to get our RIGHT graph is just wrapping with RIGHT bracket.</p>
 
