Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,16 +33,40 @@
 
 <p>There are five types of graph and four types of ggplot2 graph right now. More types will be updated.</p>
 
-<h2>
-<a name="graph-type--name--description" class="anchor" href="#graph-type--name--description"><span class="octicon octicon-link"></span></a>Graph Type | name | Description</h2>
-
-<p>Scatter plot | plot |<br>
-Bar plot | hist |<br>
-Box and Whisker plot | box |<br>
-Line plot | lines | 
-Pie plot | pie | no support in ggplot2</p>
-
-<p>Here is a summary of what types of interactivity each plot supports:
+<table>
+<thead><tr>
+<th>Graph Type</th>
+<th>name</th>
+<th>Description</th>
+</tr></thead>
+<tbody>
+<tr>
+<td>Scatter plot</td>
+<td>plot</td>
+<td></td>
+</tr>
+<tr>
+<td>Bar plot</td>
+<td>hist</td>
+<td></td>
+</tr>
+<tr>
+<td>Box and Whisker plot</td>
+<td>box</td>
+<td></td>
+</tr>
+<tr>
+<td>Line plot</td>
+<td>lines</td>
+<td></td>
+</tr>
+<tr>
+<td>Pie plot</td>
+<td>pie</td>
+<td>no support in ggplot2</td>
+</tr>
+</tbody>
+</table><p>Here is a summary of what types of interactivity each plot supports:
 LET'S SUMMARIZE WHAT TYPES OF INTERACTIVITY EACH PLOT TYPE SUPPORTS IN A TABLE.
 Read more about <a href="http://bethetaedu.github.io/tutorial/interactivity">types of supported interactivity</a> and <a href="http://bethetaedu.github.io/tutorial/options">supported plotting options</a>.</p>
 
