--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
     <meta name="description" content="Tutorial : tutorial">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="http://bethetaedu.github.io/tutorial/right.css"/>
 
     <title>Tutorial</title>
+    <script src="http://bethetaedu.github.io/tutorial/kinetic-v5.0.1.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/common.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/structure.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/axis.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/color.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/callback.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/node_event.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/menu.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/array.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/dot.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/data.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -29,6 +41,17 @@
     </div>
 
     <!-- MAIN CONTENT -->
+    <script>
+     var subDiamonds = createMainStructureE(subDiamonds);
+    </script>
+      <div id="content">
+        <div id="content1" class="right-output">
+          <div id="container1" oncontextmenu="return false;"></div></div>
+          <div id="content2" class="right-output">
+          <div id="container2" oncontextmenu="return false;"></div></div>
+      </div>
+
+  <script>
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
@@ -42,6 +65,13 @@
 And it will show like below graph.
  여기에 예제가 들어갖으면 좋겠네
 ㅠㅠ</p>
+    var axis1 = new Axis(1, subDiamonds, 'carat', 'price', {legend: 'color'});
+    var point1 = new Dot(axis1, subDiamonds, 'carat', 'price', {});
+    var axis2 = new Axis(2, subDiamonds, 'table', 'price', {legend: 'carat'});
+    var point2 = new Dot(axis2, subDiamonds, 'table', 'price', {});
+    
+    subDiamonds.draw();
+    var AllAxisObjArr = [axis1, axis2]; eventTrigger(AllAxisObjArr);
 
 <p>Now, what you need to get our RIGHT graph is just wrapping with RIGHT bracket.
 Finally you can get the exactly same graph, but beautiful and interactive one, on your default browser!</p>
