--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="http://bethetaedu.github.io/tutorial/right2.css">
 
     <title>Tutorial</title>
+    <script src="http://bethetaedu.github.io/tutorial/kinetic-v5.0.1.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/common.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/structure.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/axis.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/color.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/callback.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/node_event.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/menu.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/array.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/dot.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/data.js" type="text/javascript"></script>
   </head>
 
   <body>
