--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
     </div>
 
     <!-- MAIN CONTENT -->
+          <div id="content">
+        <div id="content1" class="right-output">
+          <div id="container1" oncontextmenu="return false;"></div></div>
+          <div id="content2" class="right-output">
+          <div id="container2" oncontextmenu="return false;"></div></div>
+      </div>
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
