--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   </head>
 
   <body>
+    <script>
+      var subDiamonds = createMainStructureE(subDiamonds);
+    </script>
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
@@ -41,11 +44,11 @@
 
     <!-- MAIN CONTENT -->
           <div id="content">
-        <div id="content1" class="right-output">
-          <div id="container1" oncontextmenu="return false;"></div></div>
-          <div id="content2" class="right-output">
-          <div id="container2" oncontextmenu="return false;"></div></div>
-      </div>
+            <div id="content1" class="right-output">
+              <div id="container1" oncontextmenu="return false;"></div></div>
+            <div id="content2" class="right-output">
+              <div id="container2" oncontextmenu="return false;"></div></div>
+          </div>
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
