--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   </head>
 
   <body>
+      <script>
+      var subDiamonds = createMainStructureE(subDiamonds);
+      </script>
     <header>
       <div class="inner">
         <h1>Tutorial</h1>
