--- a/helloright.html
+++ b/helloright.html
@@ -24,7 +24,7 @@
     <script src="http://bethetaedu.github.io/tutorial/menu.js" type="text/javascript"></script>
     <script src="http://bethetaedu.github.io/tutorial/array.js" type="text/javascript"></script>
     <script src="http://bethetaedu.github.io/tutorial/dot.js" type="text/javascript"></script>
-    <script src="http://bethetaedu.github.io/tutorial/data.js" type="text/javascript"></script>
+    <script src="http://bethetaedu.github.io/tutorial/data_helloright.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -53,22 +53,6 @@
 
 <p>And it will show like below graph.
 <img src="http://thepotter.woobi.co.kr/img/scatter_R.PNG" alt="">
-<div id="content">
-            <div id="content1" class="right-output">
-              <div id="container1" oncontextmenu="return false;"></div></div>
-            <div id="content2" class="right-output">
-              <div id="container2" oncontextmenu="return false;"></div></div>
-          </div>
-          <script>
-    
-    var axis1 = new Axis(1, subDiamonds, 'carat', 'price', {legend: 'color'});
-    var point1 = new Dot(axis1, subDiamonds, 'carat', 'price', {});
-    var axis2 = new Axis(2, subDiamonds, 'table', 'price', {legend: 'carat'});
-    var point2 = new Dot(axis2, subDiamonds, 'table', 'price', {});
-    
-    subDiamonds.draw();
-    var AllAxisObjArr = [axis1, axis2]; eventTrigger(AllAxisObjArr);
-  </script>
 
 <p>Now, what you need to get our RIGHT graph is just wrapping with RIGHT bracket.</p>
 
@@ -76,8 +60,17 @@
 </code></pre>
 
 <p>Finally you can get the exactly same graph, but beautiful and interactive one, on your default browser!</p>
+<div id="content">
+  <div id="content1" class="right-output">
+    <div id="container1" oncontextmenu="return false;"></div></div>
+<script>
+  var subDiamonds = createMainStructureE(subDiamonds);
+  var axis1 = new Axis(1, subDiamonds, 'carat', 'price', {});
+  var point1 = new Dot(axis1, subDiamonds, 'carat', 'price', {});
+  subDiamonds.draw();
+  var AllAxisObjArr = [axis1]; eventTrigger(AllAxisObjArr);
+</script>
 
-<p><img src="http://thepotter.woobi.co.kr/img/scatter_diamonds.PNG" alt=""></p>
         </section>
 
         <aside id="sidebar">
