--- a/helloright.html
+++ b/helloright.html
@@ -52,7 +52,7 @@
 </code></pre>
 
 <p>And it will show like below graph.
-<img src="http://thepotter.woobi.co.kr/img/scatter_R.PNG" alt="">
+<img src="http://bethetaedu.github.io/tutorial/helloright1.png" alt="">
 
 <p>Now, what you need to get our RIGHT graph is just wrapping with RIGHT bracket.</p>
 
