--- a/helloright.html
+++ b/helloright.html
@@ -51,7 +51,7 @@
 <pre><code>&gt; plot(price ~ carat, diamonds, type="p")
 </code></pre>
 
-<p>And it will show like below graph.
+<p>And it will show like below graph.</p>
 <img src="http://bethetaedu.github.io/tutorial/helloright1.png" alt="">
 
 <p>Now, what you need to get our RIGHT graph is just wrapping with RIGHT bracket.</p>
