--- a/helloright.html
+++ b/helloright.html
@@ -50,6 +50,9 @@
 
 <pre><code>&gt; plot(price ~ carat, diamonds, type="p")
 </code></pre>
+<div class="highlight highlight-R"><pre><span class="o">&gt;</span> subDiamonds <span class="o">&lt;-</span> diamonds<span class="p">[</span><span class="kp">sample</span><span class="p">(</span><span class="m">1</span><span class="o">:</span><span class="kp">nrow</span><span class="p">(</span>diamonds<span class="p">),</span> <span class="m">50</span><span class="p">,</span> <span class="bp">T</span><span class="p">)</span> <span class="p">,]</span>
+<span class="o">&gt;</span> plot<span class="p">(</span>price <span class="o">~</span> carat<span class="p">,</span> subDiamonds<span class="p">,</span> type<span class="o">=</span><span class="s">"p"</span><span class="p">)</span>
+</pre></div>
 
 <p>And it will show like below graph.</p>
 <img src="http://bethetaedu.github.io/tutorial/helloright1.png" alt="">
@@ -58,6 +61,8 @@
 
 <pre><code>&gt; RIGHT(plot(price ~ carat, diamonds, type="p"))
 </code></pre>
+<div class="highlight highlight-R"><pre><span class="o">&gt;</span> RIGHT<span class="p">(</span>plot<span class="p">(</span>price <span class="o">~</span> carat<span class="p">,</span> subDiamonds<span class="p">,</span> type<span class="o">=</span><span class="s">"p"</span><span class="p">))</span>
+</pre></div>
 
 <p>Finally you can get the exactly same graph, but beautiful and interactive one, on your default browser!</p>
 <div id="content">
